added profile, and work time for exhibition

--- a/src/views/error.ejs
+++ b/src/views/error.ejs
@@ -47,8 +47,7 @@
         <div style="text-align: center; margin-top: 2rem">
           <% if (user && user.role === 'admin') { %>
           <a href="/admin" class="btn btn-primary">
-            <i class="fas fa-tachometer-alt"></i> Вернуться в панель
-            администратора
+            <i class="fas fa-tachometer-alt"></i> Вернуться на главную
           </a>
           <% } else { %>
           <a href="/" class="btn btn-primary">
