--- a/src/views/admin/users.ejs
+++ b/src/views/admin/users.ejs
@@ -1,4 +1,4 @@
-<div class="admin-container">
+<div class="admin-container table-medium">
   <div class="admin-header">
     <h1>Управление пользователями</h1>
     <button type="button" class="btn btn-primary" data-modal="addUserModal">
