--- a/src/views/admin/genres.ejs
+++ b/src/views/admin/genres.ejs
@@ -1,4 +1,4 @@
-<div class="admin-container">
+<div class="admin-container table-small">
   <div class="admin-header">
     <h1>Управление жанрами</h1>
     <button type="button" class="btn btn-primary" data-modal="addGenreModal">
