added page artworks+small fixes

--- a/src/public/css/style.css
+++ b/src/public/css/style.css
@@ -163,7 +163,7 @@ main {
 }
 
 .card-header {
-    background-color: #007bff;
+    background-color: #666;
     color: white;
     padding: 1rem;
 }
