--- a/src/views/manager/exhibitions.ejs
+++ b/src/views/manager/exhibitions.ejs
@@ -264,11 +264,11 @@
             id="exhibitionArtworksCheckboxes"
             class="artworks-checkbox-list"
           ></div>
-          <div class="error-message" id="exhibitionArtworksError"></div>
+          <div class="error-message" id="exhibitionArtworksCheckboxesError"></div>
         </div>
         <div class="form-group">
           <label for="exhibitionPoster">Афиша (изображение)</label>
-          <input type="file" id="exhibitionPoster" accept="image/*" required />
+          <input type="file" id="exhibitionPoster" name="poster"  accept="image/*" />
           <div class="image-preview" id="addPosterPreview"></div>
           <div class="error-message" id="exhibitionPosterError"></div>
         </div>
@@ -382,7 +382,7 @@
             id="editExhibitionArtworksCheckboxes"
             class="artworks-checkbox-list"
           ></div>
-          <div class="error-message" id="editExhibitionArtworksError"></div>
+          <div class="error-message" id="editexhibitionArtworksCheckboxesError"></div>
         </div>
         <div class="form-group">
           <label for="editExhibitionPoster">Афиша (изображение)</label>
