--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -89,4 +89,21 @@
     </div>
   </div>
 </main>
+
+
+<div id="image-lightbox" style="
+  display: none;
+  position: fixed;
+  top: 0; left: 0; right: 0; bottom: 0;
+  background: rgba(0,0,0,0.8);
+  justify-content: center;
+  align-items: center;
+  z-index: 1000;
+">
+    <img id="lightbox-img" src="" alt="Увеличенное изображение" style="
+    max-width: 90%;
+    max-height: 90%;
+    box-shadow: 0 0 20px rgba(0,0,0,0.5);
+  ">
+  </div>
 <script src="/js/main.js"></script>
